--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {},
   "devDependencies": {
     "ava": "^0.14.0",
+    "coveralls": "^2.11.9",
     "delay": "^1.3.1",
     "nyc": "^6.4.0",
     "rxjs": "^5.0.0-beta.6",
