--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   ],
   "dependencies": {},
   "devDependencies": {
+    "array-to-events": "^1.0.0",
     "ava": "^0.14.0",
     "coveralls": "^2.11.9",
     "delay": "^1.3.1",
