use any-observable (#6)
* use any-observable

* PR feedback

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "node": ">=0.12.0"
   },
   "scripts": {
-    "test": "xo && nyc --reporter=lcov --reporter=text ava"
+    "test": "xo && nyc --reporter=lcov --reporter=text npm run test_both",
+    "test_both": "ava --require=any-observable/register/rxjs && ava --require=any-observable/register/zen"
   },
   "files": [
     "index.js",
@@ -26,6 +27,9 @@
     "observable",
     "convert"
   ],
+  "dependencies": {
+    "any-observable": "^0.2.0"
+  },
   "devDependencies": {
     "array-to-events": "^1.0.0",
     "ava": "^0.14.0",
