--- a/package.json
+++ b/package.json
@@ -39,5 +39,15 @@
     "rxjs": "^5.0.0-beta.6",
     "xo": "^0.16.0",
     "zen-observable": "^0.3.0"
+  },
+  "xo": {
+    "overrides": [
+      {
+        "files": [
+          "test.js"
+        ],
+        "esnext": true
+      }
+    ]
   }
 }
