--- a/package.json
+++ b/package.json
@@ -10,17 +10,14 @@
     "url": "github.com/jamestalmage"
   },
   "engines": {
-    "node": ">=0.12.0"
+    "node": ">=6"
   },
   "scripts": {
     "test": "xo && nyc --reporter=lcov --reporter=text npm run test_both",
     "test_both": "ava --require=any-observable/register/rxjs && ava --require=any-observable/register/zen"
   },
   "files": [
-    "index.js",
-    "zen.js",
-    "rxjs.js",
-    "rxjs-all.js"
+    "index.js"
   ],
   "keywords": [
     "stream",
@@ -32,22 +29,12 @@
   },
   "devDependencies": {
     "array-to-events": "^1.0.0",
-    "ava": "^0.15.2",
-    "coveralls": "^2.11.9",
-    "delay": "^1.3.1",
-    "nyc": "^6.4.0",
-    "rxjs": "^5.0.0-beta.6",
-    "xo": "^0.16.0",
-    "zen-observable": "^0.3.0"
-  },
-  "xo": {
-    "overrides": [
-      {
-        "files": [
-          "test.js"
-        ],
-        "esnext": true
-      }
-    ]
+    "ava": "^0.25.0",
+    "coveralls": "^3.0.0",
+    "delay": "^2.0.0",
+    "nyc": "^11.7.1",
+    "rxjs": "^5.5.10",
+    "xo": "^0.20.3",
+    "zen-observable": "^0.8.8"
   }
 }
